# taurino-core

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-Apache  LICENSE-MIT  README.md  rustfmt.toml
docs/: architecture.md
examples/: basic.rs
src/: lib.rs
src/core/: app_error.rs  builders.rs  context.rs  eventloop.rs  handle_loop.rs  handle_user.rs  messages.rs  mod.rs  utils.rs  webview.rs  webview_builder.rs  window.rs  window_builder.rs  wrapper.rs
